@@ -20,10 +20,11 @@
 
 
 /**
- * Creates global database connection
+ * Creates global database connection.
  *
  * @param string $error returns a message in case of an error
- * @param bool $debug turns On or Off trace calls when making connections. Suggested debug mode Off during Zabbix setup
+ * @param bool   $debug turns On or Off trace calls when making connections. Suggested debug mode Off during Zabbix setup
+ *
  * @return bool
  */
 function DBconnect(&$error) {
@@ -287,9 +288,10 @@ function DBstart() {
 }
 
 /**
- * Closes transaction
+ * Closes transaction.
  *
  * @param string $doCommit True - do commit, rollback otherwise. Rollback is also always performed if a sql failed within this transaction.
+ *
  * @return bool True - successful commit, False - otherwise
  */
 function DBend($doCommit = true) {
@@ -398,8 +400,9 @@ function DBrollback() {
  * DBselect('select * from users',50,200)
  *
  * @param string $query
- * @param integer $limit max number of record to return
- * @param integer $offset return starting from $offset record
+ * @param int    $limit max number of record to return
+ * @param int    $offset return starting from $offset record
+ *
  * @return resource or object, False if failed
  */
 function DBselect($query, $limit = null, $offset = 0) {
@@ -689,8 +692,8 @@ function id2nodeid($id) {
 }
 
 /**
- * Generates the filter by a node for the SQL statement
- * For a standalone setup the function will return an empty string
+ * Generates the filter by a node for the SQL statement.
+ * For a standalone setup the function will return an empty string.
  *
  * For example, function will return " AND h.hostid BETWEEN 500000000000000 AND 599999999999999"
  *   for $fieldName = 'h.hostid', $nodes = 5, $operator = 'AND'
@@ -698,8 +701,8 @@ function id2nodeid($id) {
  * Don't call this function directly. Use wrapper functions whereDbNode(), andDbNode() and sqlPartDbNode()
  *
  * @param string $fieldName
- * @param mixed nodes
- * @param string $operator  SQL operator ('AND', 'WHERE')
+ * @param mixed  $nodes
+ * @param string $operator		SQL operator ('AND', 'WHERE')
  *
  * @return string
  */
@@ -752,7 +755,7 @@ function dbNode($fieldName, $nodes = null, $operator = '') {
  * For a standalone setup the function will return an empty string.
  *
  * @param string $fieldName
- * @param mixed  nodes
+ * @param mixed  $nodes
  *
  * @return string
  */
@@ -779,7 +782,7 @@ function andDbNode($fieldName, $nodes = null) {
  *
  * @param array  $sqlPartWhere
  * @param string $fieldName
- * @param mixed  nodes
+ * @param mixed  $nodes
  *
  * @return array
  */
@@ -967,7 +970,7 @@ function remove_nodes_from_id($id) {
  * @param $dbFields
  * @param $args
  *
- * @return boolean
+ * @return bool
  */
 function check_db_fields($dbFields, &$args) {
 	if (!is_array($args)) {
@@ -993,122 +996,108 @@ function check_db_fields($dbFields, &$args) {
  * The WHERE condition is generated from the given list of values as a mix of
  * <fieldname> BETWEEN <id1> AND <idN>" and "<fieldname> IN (<id1>,<id2>,...,<idN>)" elements.
  *
- * @param string $fieldName  field name to be used in SQL WHERE condition
- * @param array  $values     array of numerical values sorted in ascending order to be included in WHERE
- * @param bool   $notIn      builds inverted condition
+ * @param string $fieldName		field name to be used in SQL WHERE condition
+ * @param array  $values		array of numerical values sorted in ascending order to be included in WHERE
+ * @param bool   $notIn			builds inverted condition
  *
  * @return string
  */
-function dbConditionInt($fieldName, array $values, $notIn = false) {
+function dbConditionInt($fieldName, array $values, $notIn = false, $sort = true) {
 	$MAX_EXPRESSIONS = 950; // maximum  number of values for using "IN (id1>,<id2>,...,<idN>)"
-	$MIN_NUM_BETWEEN = 5; // minimum number of consecutive values for using "BETWEEN <id1> AND <idN>"
+	$MIN_NUM_BETWEEN = 4; // minimum number of consecutive values for using "BETWEEN <id1> AND <idN>"
 
 	if (count($values) == 0) {
 		return '1=0';
 	}
 
-	$condition = '';
+	$values = array_unique($values);
+
+	if ($sort) {
+		natsort($values);
+	}
+
+	zbx_cleanHashes($values);
 
 	$betweens = array();
-	$ins = array();
+	$data = array();
 
-	$pos = 1;
-	$len = 1;
-	foreach ($values as $valueR) {
-		if (!isset($valueL)) {
-			$valueL = $valueR;
-			continue;
-		}
+	for ($i = 0, $size = count($values); $i < $size; $i++) {
+		$between = array();
 
-		$valueL = bcadd($valueL, 1, 0);
-
-		if (bccomp($valueR, $valueL) != 0) {
-			if ($len >= $MIN_NUM_BETWEEN) {
-				$betweens[] = array(bcsub($valueL, $len, 0), bcsub($valueL, 1, 0));
+		// analyze by chunk
+		if (isset($values[$i + $MIN_NUM_BETWEEN])
+				&& bccomp(bcadd($values[$i], $MIN_NUM_BETWEEN), $values[$i + $MIN_NUM_BETWEEN]) == 0) {
+			for ($sizeMinBetween = $i + $MIN_NUM_BETWEEN; $i < $sizeMinBetween; $i++) {
+				$between[] = $values[$i];
 			}
-			else {
-				foreach (array_slice($values, $pos - $len, $len) as $val) {
-					array_push($ins, $val);
+
+			$i--; // shift 1 back
+
+			// analyze by one
+			for (; $i < $size; $i++) {
+				if (isset($values[$i + 1]) && bccomp(bcadd($values[$i], 1), $values[$i + 1]) == 0) {
+					$between[] = $values[$i + 1];
+				}
+				else {
+					break;
 				}
 			}
 
-			$len = 1;
-			$valueL = $valueR;
+			$betweens[] = $between;
 		}
 		else {
-			$len++;
+			$data[] = $values[$i];
 		}
-		$pos++;
 	}
 
-	if ($len >= $MIN_NUM_BETWEEN) {
-		$betweens[] = array(bcadd(bcsub($valueL, $len, 0), 1, 0), $valueL);
+	// concatenate conditions
+	$dataSize = count($data);
+	$betweenSize = count($betweens);
+
+	$condition = '';
+	$operatorAnd = $notIn ? ' AND ' : ' OR ';
+
+	if ($betweens) {
+		$operatorNot = $notIn ? 'NOT ' : '';
+
+		foreach ($betweens as $between) {
+			$between = $operatorNot.$fieldName.' BETWEEN '.zbx_dbstr($between[0]).' AND '.zbx_dbstr(end($between));
+
+			$condition .= $condition ? $operatorAnd.$between : $between;
+		}
+	}
+
+	if ($dataSize == 1) {
+		$operator = $notIn ? '!=' : '=';
+
+		$condition .= ($condition ? $operatorAnd : '').$fieldName.$operator.zbx_dbstr($data[0]);
 	}
 	else {
-		foreach (array_slice($values, $pos - $len, $len) as $val) {
-			array_push($ins, $val);
-		}
-	}
+		$operatorNot = $notIn ? ' NOT' : '';
+		$data = array_chunk($data, $MAX_EXPRESSIONS);
 
-	$operand = $notIn ? 'AND' : 'OR';
-	$not = $notIn ? 'NOT ' : '';
-	$inNum = count($ins);
-	$betweenNum = count($betweens);
+		foreach ($data as $chunk) {
+			$chunkIns = '';
 
-	if ($MAX_EXPRESSIONS < $inNum || 1 < $betweenNum || (0 < $inNum && 0 < $betweenNum)) {
-		$condition .= '(';
-	}
-
-	// compose "BETWEEN"s
-	$first = true;
-	foreach ($betweens as $between) {
-		if (!$first) {
-			$condition .= ' '.$operand.' ';
-		}
-		$condition .= $not.$fieldName.' BETWEEN '.zbx_dbstr($between[0]).' AND '.zbx_dbstr($between[1]);
-		$first = false;
-	}
-
-	if (0 < $inNum && 0 < $betweenNum) {
-		$condition .= ' '.$operand.' ';
-	}
-
-	if ($inNum == 1) {
-		foreach ($ins as $insValue) {
-			$condition .= $notIn
-				? $fieldName.'!='.zbx_dbstr($insValue)
-				: $fieldName.'='.zbx_dbstr($insValue);
-			break;
-		}
-	}
-
-	// compose "IN"s
-	else {
-		$first = true;
-		foreach (array_chunk($ins, $MAX_EXPRESSIONS) as $in) {
-			if (!$first) {
-				$condition .= ' '.$operand.' ';
+			foreach ($chunk as $value) {
+				$chunkIns .= ','.zbx_dbstr($value);
 			}
 
-			$in = array_map('zbx_dbstr', $in);
-			$condition .= $fieldName.' '.$not.'IN ('.implode(',', $in).')';
-			$first = false;
+			$chunkIns = $fieldName.$operatorNot.' IN ('.substr($chunkIns, 1).')';
+
+			$condition .= $condition ? $operatorAnd.$chunkIns : $chunkIns;
 		}
 	}
 
-	if ($MAX_EXPRESSIONS < $inNum || 1 < $betweenNum || (0 < $inNum && 0 < $betweenNum)) {
-		$condition .= ')';
-	}
-
-	return $condition;
+	return (($dataSize && $betweenSize) || $betweenSize > 1 || $dataSize > $MAX_EXPRESSIONS) ? '('.$condition.')' : $condition;
 }
 
 /**
  * Takes an initial part of SQL query and appends a generated WHERE condition.
  *
- * @param string $fieldName  field name to be used in SQL WHERE condition
- * @param array  $values     array of string values sorted in ascending order to be included in WHERE
- * @param bool   $notIn      builds inverted condition
+ * @param string $fieldName		field name to be used in SQL WHERE condition
+ * @param array  $values		array of string values sorted in ascending order to be included in WHERE
+ * @param bool   $notIn			builds inverted condition
  *
  * @return string
  */
@@ -1140,7 +1129,7 @@ function zero2null($val) {
 }
 
 /**
- * Transform DB cursor to array
+ * Transform DB cursor to array.
  *
  * @return array
  */
@@ -1153,7 +1142,7 @@ function DBfetchArray($cursor) {
 }
 
 /**
- * Transform DB cursor to array
+ * Transform DB cursor to array.
  *
  * @return array
  */
@@ -1168,9 +1157,9 @@ function DBfetchArrayAssoc($cursor, $field) {
 /**
  * Fetch only values from one column to array.
  *
- * @param        $cursor
- * @param string $column
- * @param bool   $asHash
+ * @param resource $cursor
+ * @param string   $column
+ * @param bool     $asHash
  *
  * @return array
  */
@@ -1190,7 +1179,7 @@ function DBfetchColumn($cursor, $column, $asHash = false) {
 }
 
 /**
- * Initialize access to SQLite3 database
+ * Initialize access to SQLite3 database.
  *
  * The function creates a semaphore for exclusive SQLite3 access. It is
  * shared between Zabbix front-end and Zabbix Server.
@@ -1204,7 +1193,7 @@ function init_sqlite3_access() {
 }
 
 /**
- * Get exclusive lock on SQLite3 database
+ * Get exclusive lock on SQLite3 database.
  *
  * @return bool
  */
@@ -1215,7 +1204,7 @@ function lock_sqlite3_access() {
 }
 
 /**
- * Release exclusive lock on SQLite3 database
+ * Release exclusive lock on SQLite3 database.
  *
  * @return bool
  */
